Dynamically set 'overflow' property on modal dialogs. Fixed positioning of the context menu inside the Edit Permissions dialog (#405)

--- a/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/dialog/modal-dialog.less
@@ -65,7 +65,6 @@
   .modal-dialog-body {
     padding: 15px 20px 0 30px;
     flex: 1;
-    overflow: auto;
     max-height: 50vh;
   }
 
